--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -62,6 +62,7 @@
   display: flex;
   gap: 10px;
   margin-left: 5%;
+  align-items: center;
 }
 
 .box-panel-task p{
@@ -75,3 +76,16 @@
   align-items: center;  
 }
 
+.remove-task-button {
+  background-color: red;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  padding: 0;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: center;
+}
