--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -1,7 +1,7 @@
 .calendar-grid {
     display: grid;
     grid-template-columns: repeat(7, 1fr); /* 7 columns for days of the week */
-    gap: 10px; /* Space between grid items */
+    gap: 10px;
   }
   
 .calendar-day {
@@ -10,20 +10,33 @@
   padding: 10px;
   text-align: center;
 }
-  
+
 .box-panel{
-  position: absolute;
-  top: 5%;
-  left: 30%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
   width: 50rem;
   height: 50rem;
+  max-height: 50rem;
   background-color: green;
+  z-index: 20;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .box-panel-close-button{
   position: absolute;
-  margin-left: .3rem;
-  margin-top: .3rem;
+  top: 0.5rem;
+  left: 0.5rem;
+  z-index: 21;
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem;
+  font-weight: bold;
+  
 }
 
 .box-panel-close-button button{
@@ -55,6 +68,21 @@
 
 .box-panel-container-task{
   position: relative;
+  overflow-y: auto;
+  padding-right: 10px;
+}
+
+.box-panel-container-task::-webkit-scrollbar {
+  width: 8px;
+}
+
+.box-panel-container-task::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+
+.box-panel-container-task::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .box-panel-task{
@@ -88,4 +116,15 @@
   font-size: 12px;
   line-height: 20px;
   text-align: center;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 10; 
+  pointer-events: auto;
 }
